moved script tag to fix issues with wrong sized canvas

--- a/style.css
+++ b/style.css
@@ -4,6 +4,3 @@ html, body {
     margin: 0px;
 }
 
-#canvas {
-    border: 1px solid #000;
-}
